testdata/bad/timestamp_67.ion
2004-12-11T24:10:11z
